[metadata]
name = webkit2png
description = Takes snapshot of webpages using Webkit and Qt4
author = Roland Tapken
author-email = roland@dau-sicher.de
home-page = http://github.com/AdamN/python-webkit2pn
classifier = 
    Development Status :: 4 - Beta
        Environment :: Web Environment
        Intended Audience :: Developers
        License :: OSI Approved :: GNU General Public License (GPL)
        Operating System :: MacOS :: MacOS X
        Operating System :: POSIX
        Programming Language :: Python
        Topic :: Software Development :: Bug Tracking
        Topic :: Multimedia :: Graphics :: Capture :: Screen Capture
        Topic :: Utilities'

[entry_points]
console_scripts =
    webkit2png = webkit2png.run:run

[flake8]
max-line-length = 99

[pep8]
max-line-length = 99
